<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/ic_vien">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_title"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="50dp"
                android:text="@string/tv_save"
                android:textSize="20dp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="20dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white" />
        </RelativeLayout>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/ic_vientrang"
            android:text="@string/edt_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_vientrang"
            android:gravity="start"
            android:text="@string/edt_des"
            android:textAlignment="textStart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tv_remind" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="14:20"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="04/03/2016"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_type"

                />

            <Spinner
                android:id="@+id/spnType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tag"

                />

            <CheckedTextView
                android:id="@+id/ctvTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Android,VTC,FPT, Game" />

            <FrameLayout
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_weeks"

                />

            <CheckedTextView
                android:id="@+id/ctvWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mon,Thu,Sat" />

        </LinearLayout>

        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/btTune"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_tune" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear" />


</RelativeLayout>